--- a/galeri.html
+++ b/galeri.html
@@ -33,7 +33,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/feather-icons"></script>
-    <title>Kontak GPM Tuhaha</title>
+    <title>Galeri Jemaat GPM Tuhaha</title>
 </head>
 
 <body>
