--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/feather-icons"></script>
-    <title>Kontak Jemaat GPM Tuhaha</title>
+    <title>Beranda Jemaat GPM Tuhaha</title>
 </head>
 
 <body>
