--- a/pelwata.html
+++ b/pelwata.html
@@ -33,7 +33,7 @@
     
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/feather-icons"></script>
-    <title>Kontak GPM Tuhaha</title>
+    <title>Event Wisata Rohani Wadah Perempuan Jemaat GPM Tuhaha</title>
 </head>
 
 <body>
