menambahkan animasi pada bagian beranda

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">
@@ -52,9 +53,9 @@
 
 <body>
     <div class="wrapper">
-        <nav class="navbar">
+        <nav class="navbar" data-aos="fade-down" data-aos-duration="2000">
             <img src="image/WhatsApp_Image_2025-06-15_at_09.55.44_c7478516_Nero_AI_Image_Upscaler_Photo_Face-removebg-preview (1).png"
-                alt="" class="navbar-logo">
+                alt="" class="navbar-logo" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="2000">
             <ul class="navbar-nav">
                 <li><a href="index.html" id="home">BERANDA</a></li>
                 <li>
@@ -101,46 +102,46 @@
         </div>
         <section class="sumberkasih-wrapper">
             <div class="sumberkasih-title-container">
-                <h2 class="sumberkasih-title">SISTEM PELAYANAN DAN INFORMASI JEMAAT GPM TUHAHA</h2>
+                <h2 class="sumberkasih-title" data-aos="fade" data-aos-duration="2700">SISTEM PELAYANAN DAN INFORMASI JEMAAT GPM TUHAHA</h2>
             </div>
             <div class="sumberkasih-grid">
-                <div class="sumberkasih-item">
+                <div class="sumberkasih-item" data-aos="fade-up" data-aos-duration="1500">
                     <a href="berita.html"><i class="fa-solid fa-clipboard-list"></i>
                         <p>Buletin</p>
                     </a>
                 </div>
-                <div class="sumberkasih-item">
+                <div class="sumberkasih-item" data-aos="fade-up" data-aos-duration="1800">
                     <a href=""><i class="fa-regular fa-calendar-check"></i>
                         <p>Agenda</p>
                     </a>
                 </div>
-                <div class="sumberkasih-item">
+                <div class="sumberkasih-item" data-aos="fade-up" data-aos-duration="2100">
                     <a href=""><i class="fa-solid fa-database"></i>
                         <p>Bank Data</p>
                     </a>
                 </div>
-                <div class="sumberkasih-item">
+                <div class="sumberkasih-item" data-aos="fade-up" data-aos-duration="2400">
                     <a href=""><i class="fa-solid fa-users"></i>
                         <p>Majelis Jemaat</p>
                     </a>
                 </div>
-                <div class="sumberkasih-item">
+                <div class="sumberkasih-item" data-aos="fade-up" data-aos-duration="2700">
                     <a href=""><i class="fa-solid fa-sitemap"></i>
                         <p>Struktur</p>
                     </a>
                 </div>
             </div>
         </section>
-        <div class="first-p">
+        <div class="first-p" data-aos="fade" data-aos-duration="2000" data-aos-delay="2000">
             <h3>Selamat Datang</h3>
             <h1>JEMAAT GPM TUHAHA</h1>
         </div>
         <div class="salam">
             <div class="gambar">
                 <img src="image/WhatsApp_Image_2025-06-15_at_09.55.44_c7478516_Nero_AI_Image_Upscaler_Photo_Face-removebg-preview (1).png"
-                    alt="">
+                    alt="" data-aos="fade-down" data-aos-duration="1500">
             </div>
-            <div class="kata-kata">
+            <div class="kata-kata" data-aos="fade-up" data-aos-duration="1500">
                 <h2>Selamat Datang di Website</h2>
                 <h1>Jemaat GPM Tuhaha</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, maiores harum? Voluptas quaerat,
@@ -156,7 +157,7 @@
             </div>
         </div>
         <div class="home" id="home">
-            <div class="data-diri">
+            <div class="data-diri" data-aos="zoom-in" data-aos-duration="1000">
                 <div class="data-1">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="User--Streamline-Font-Awesome"
                         height="16" width="16" class="icon">
@@ -195,9 +196,9 @@
         </div>
 
         <br><br><br><br>
-        <h2 class="sumberkasih-title">BERITA</h2><br><br>
+        <h2 class="sumberkasih-title" data-aos="fade" data-aos-duration="2700">BERITA</h2><br><br>
         <section class="berita home">
-            <div class="card-berita home">
+            <div class="card-berita home" data-aos="flip-left" data-aos-duration="2500">
                 <div class="bingkai">
                     <img src="image/berita-img/f-2.jpg" alt="" width="100px" height="80px">
                 </div>
@@ -212,17 +213,17 @@
 
 
         <div class="home-galeri">
-            <h2 class="sumberkasih-title">GALERI</h2><br><br>
+            <h2 class="sumberkasih-title" data-aos="fade" data-aos-duration="2700" data-aos-delay="300">GALERI</h2><br><br>
             <div class="home-galeri-wrapper">
-                <img src="image/berita-img/f-12.jpg" alt="">
-                <button><a href="galeri.html"><b>
+                <img src="image/berita-img/f-12.jpg" alt="" data-aos="fade-up" data-aos-duration="2700">
+                <button><a href="galeri.html" data-aos="fade" data-aos-duration="2700"><b>
                             < Lebih Lanjut>
                         </b></a></button>
-                <img src="image/mangkok-6-bulan/1.jpg" alt="">
+                <img src="image/mangkok-6-bulan/1.jpg" alt="" data-aos="fade-up" data-aos-duration="2700">
             </div>
         </div>
 
-        <div class="footer">
+        <div class="footer" data-aos="fade-up">
             <div class="footer-kontak">
                 <h1>Hubungi Kami</h1>
                 <p>Gereja Pniel Tuhaha, Jln. Pelabuhan - Tuhaha, Kecamatan Saparua Timur</p>
@@ -261,7 +262,7 @@
                 </iframe>
             </div>
         </div>
-        <div class="last-footer">
+        <div class="last-footer" >
             <p class="Copyright">Copyright &copy; 2025 | Jemaat GPM Tuhaha</p>
             <a href="kontak.html">Tim Multimedia Jemaat GPM Tuhaha</a>
         </div>
@@ -272,6 +273,10 @@
         </script>
 
         <script src="script.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 
 </html>
