--- a/sejarah.html
+++ b/sejarah.html
@@ -147,6 +147,10 @@
     </script>
 
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 
 </html>
