menambahkan animasi, majelis jemaat

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <ul class="dropdown">
                         <li><a href="#warta">PHMJ</a></li><br>
                         <li><a href="#pengumuman">PENDETA JEMAAT</a></li><br>
-                        <li><a href="#bank">MAJELIS JEMAAT</a></li><br>
+                        <li><a href="majelis.html">MAJELIS JEMAAT</a></li><br>
                         <li><a href="#transparansi">TUAGAMA</a></li><br>
                         <li><a href="#informasiBerkala">JADWAL IBADAH</a></li><br>
                         <li><a href="#informasiBerkala">TIM MULTIMEDIA</a></li>
@@ -95,8 +95,7 @@
             <button class="carousel-btn prev">&lsaquo;</button>
             <div class="slides-container">
                 <img src="image/WhatsApp Image 2025-06-15 at 09.55.46_c876cbd4.jpg" alt="Slide 1" class="slide active">
-                <img src="image/BG1.jpg" alt="Slide 2" class="slide">
-                <img src="image/BG2.jpg" alt="Slide 3" class="slide">
+                <img src="image/Majelis Jemaat.png" alt="Slide 2" class="slide">
             </div>
             <button class="carousel-btn next">&rsaquo;</button>
         </div>
@@ -132,33 +131,25 @@
                 </div>
             </div>
         </section>
-        <div class="first-p" data-aos="fade" data-aos-duration="2000" data-aos-delay="2000">
+        <div class="first-p" data-aos="fade" data-aos-duration="3000" data-aos-delay="3000">
             <h3>Selamat Datang</h3>
             <h1>JEMAAT GPM TUHAHA</h1>
         </div>
         <div class="salam">
             <div class="gambar">
-                <img src="image/WhatsApp_Image_2025-06-15_at_09.55.44_c7478516_Nero_AI_Image_Upscaler_Photo_Face-removebg-preview (1).png"
+                <img src="image/bapen.png" width="300px" height="350px"
                     alt="" data-aos="fade-down" data-aos-duration="1500">
+                    <div class="gradient"></div>
             </div>
             <div class="kata-kata" data-aos="fade-up" data-aos-duration="1500">
                 <h2>Selamat Datang di Website</h2>
                 <h1>Jemaat GPM Tuhaha</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, maiores harum? Voluptas quaerat,
-                    qui molestiae iste nam perspiciatis, repellendus ratione esse atque illo explicabo deserunt
-                    enim.amskww adkaia</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, ea explicabo! Libero, illum animi
-                    harum iure ad deleniti similique earum voluptatem perspiciatis, ut optio dolor veritatis impedit ea
-                    voluptate quidem!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus rerum minima nihil ipsa, ea
-                    reprehenderit amet dolor eum dolore reiciendis architecto perspiciatis nostrum unde eligendi, sunt
-                    eius doloribus? Iste quisquam et pariatur blanditiis nemo inventore vel, incidunt, debitis cumque
-                    impedit voluptatum explicabo repudiandae ut ratione a totam dolorem rem facere.</p>
+                <p>Selamat datang di Jemaat GPM Tuhaha. Kami sangat bersyukur hati Anda mampir ke sini—baik Anda sudah lama bersama kami maupun baru pertama kali berkunjung secara online. Semoga Anda merasakan kehangatan, ketulusan, dan keakraban komunitas kami. Jangan ragu untuk menjelajahi laman ini; Anda akan menemukan info mengenai jadwal ibadah, program persekutuan, dan cara untuk terhubung langsung. Kiranya kedamaian dan sukacita Tuhan senantiasa menyertai Anda. Bila Anda memerlukan bantuan, doa, atau sekadar ingin menyapa, pintu kami dan hati kami selalu terbuka. </p>
             </div>
         </div>
         <div class="home" id="home">
             <div class="data-diri" data-aos="zoom-in" data-aos-duration="1000">
-                <div class="data-1">
+                <div class="data-1" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="1000">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="User--Streamline-Font-Awesome"
                         height="16" width="16" class="icon">
                         <path
@@ -168,7 +159,7 @@
                     <h2>Jumlah Jiwa</h2> <br>
                     <h1>2789</h1>
                 </div>
-                <div class="data-2">
+                <div class="data-2" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="1100">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="icon">
                         <path
                             d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192l42.7 0c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0L21.3 320C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7l42.7 0C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3l-213.3 0zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352l117.3 0C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7l-330.7 0c-14.7 0-26.7-11.9-26.7-26.7z" />
@@ -176,7 +167,7 @@
                     <h2>Jumlah KK</h2><br>
                     <h1>695</h1>
                 </div>
-                <div class="data-3">
+                <div class="data-3" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="1200">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="icon">
                         <path
                             d="M112 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm40 304l0 128c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-223.1L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6l29.7 0c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9 232 480c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-128-16 0z" />
@@ -184,7 +175,7 @@
                     <h2>Jumlah Pria</h2><br>
                     <h1>1418</h1>
                 </div>
-                <div class="data-4">
+                <div class="data-4" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="1300">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="icon">
                         <path
                             d="M160 0a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM88 384l-17.8 0c-10.9 0-18.6-10.7-15.2-21.1L93.3 248.1 59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l53.6-89.2c20.3-33.7 56.7-54.3 96-54.3l11.6 0c39.3 0 75.7 20.6 96 54.3l53.6 89.2c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9l-33.9-56.3L265 362.9c3.5 10.4-4.3 21.1-15.2 21.1L232 384l0 96c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-96-16 0 0 96c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-96z" />
@@ -258,7 +249,7 @@
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d382.7270879719592!2d128.68968594760247!3d-3.53427767591423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d6b7d8dd4b12345%3A0xee0c3881202fe74b!2sGereja%20Pniel%20Tuhaha!5e0!3m2!1sid!2sid!4v1750222895073!5m2!1sid!2sid"
                     width="600" height="650" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
+                    referrerpolicy="no-referrer-when-downgrade" data-aos="zoom-in" data-aos-delay="500">
                 </iframe>
             </div>
         </div>
