ganti bg majelis home

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <button class="carousel-btn prev">&lsaquo;</button>
             <div class="slides-container">
                 <img src="image/WhatsApp Image 2025-06-15 at 09.55.46_c876cbd4.jpg" alt="Slide 1" class="slide active">
-                <img src="image/Majelis Jemaat.png" alt="Slide 2" class="slide">
+                <img src="image/mj-hero.jpg" alt="Slide 2" class="slide">
             </div>
             <button class="carousel-btn next">&rsaquo;</button>
         </div>
