lambatkan carousel, berita > buletin, memperkecil berita home

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                         <li><a href="visi.html">VISI & MISI</a></li><br>
                         <li><a href="sejarah.html">SEJARAH</a></li><br>
                         <li><a href="galeri.html">GALERI</a></li><br>
-                        <li><a href="berita.html">BERITA</a></li><br>
-                        <li><a href="#sejarah">LITURGI IBADAH</a></li><br>
+                        <li><a href="berita.html">BULETIN</a></li><br>
                         <li><a href="#sejarah">REKENING</a></li>
                     </ul>
                 </li>
@@ -76,7 +75,9 @@
                         <li><a href="majelis.html">MAJELIS JEMAAT</a></li><br>
                         <li><a href="#transparansi">TUAGAMA</a></li><br>
                         <li><a href="#informasiBerkala">JADWAL IBADAH</a></li><br>
-                        <li><a href="#informasiBerkala">TIM MULTIMEDIA</a></li>
+                        <li><a href="#informasiBerkala">TIM MULTIMEDIA</a></li><br>
+                        <li><a href="#sejarah">LITURGI IBADAH</a></li><br>
+                        <li><a href="#sejarah">JADWAL IBADAH</a></li>
                     </ul>
                 </li>
                 <li><a href="#galeri">EVENTS</a></li>
@@ -187,7 +188,7 @@
         </div>
 
         <br><br><br><br>
-        <h2 class="sumberkasih-title" data-aos="fade" data-aos-duration="2700">BERITA</h2><br><br>
+        <h2 class="sumberkasih-title" data-aos="fade" data-aos-duration="2700">BULETIN</h2><br><br>
         <section class="berita home">
             <div class="card-berita home" data-aos="flip-left" data-aos-duration="2500">
                 <div class="bingkai">
