--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </a>
                 </div>
                 <div class="sumberkasih-item" data-aos="fade-up" data-aos-duration="2400">
-                    <a href=""><i class="fa-solid fa-users"></i>
+                    <a href="majelis.html"><i class="fa-solid fa-users"></i>
                         <p>Majelis Jemaat</p>
                     </a>
                 </div>
