berita = buletin, besarkan icon svg footer

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <li><a href="sejarah.html">SEJARAH</a></li><br>
                         <li><a href="galeri.html">GALERI</a></li><br>
                         <li><a href="berita.html">BULETIN</a></li><br>
+                        <li><a href="#sejarah">LITURGI IBADAH</a></li><br>
                         <li><a href="#sejarah">REKENING</a></li>
                     </ul>
                 </li>
@@ -75,9 +76,7 @@
                         <li><a href="majelis.html">MAJELIS JEMAAT</a></li><br>
                         <li><a href="#transparansi">TUAGAMA</a></li><br>
                         <li><a href="#informasiBerkala">JADWAL IBADAH</a></li><br>
-                        <li><a href="#informasiBerkala">TIM MULTIMEDIA</a></li><br>
-                        <li><a href="#sejarah">LITURGI IBADAH</a></li><br>
-                        <li><a href="#sejarah">JADWAL IBADAH</a></li>
+                        <li><a href="#informasiBerkala">TIM MULTIMEDIA</a></li>
                     </ul>
                 </li>
                 <li><a href="#galeri">EVENTS</a></li>
