--- a/g-pelwata.html
+++ b/g-pelwata.html
@@ -39,7 +39,7 @@
 
 <body>
     <div class="wrapper">
-        <nav class="navbar" data-aos="fade-down" data-aos-duration="1000">
+        <nav class="navbar" data-aos="fade-down" data-aos-duration="2000">
             <img src="image/WhatsApp_Image_2025-06-15_at_09.55.44_c7478516_Nero_AI_Image_Upscaler_Photo_Face-removebg-preview (1).png"
                 alt="" class="navbar-logo" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="2000">
             <ul class="navbar-nav">
@@ -50,7 +50,7 @@
                         <li><a href="visi.html">VISI & MISI</a></li><br>
                         <li><a href="sejarah.html">SEJARAH</a></li><br>
                         <li><a href="galeri.html">GALERI</a></li><br>
-                        <li><a href="berita.html">BERITA</a></li><br>
+                        <li><a href="berita.html">BULETIN</a></li><br>
                         <li><a href="#sejarah">LITURGI IBADAH</a></li><br>
                         <li><a href="#sejarah">REKENING</a></li>
                     </ul>
