--- a/visi.html
+++ b/visi.html
@@ -51,7 +51,7 @@
                         <li><a href="visi.html">VISI & MISI</a></li><br>
                         <li><a href="sejarah.html">SEJARAH</a></li><br>
                         <li><a href="galeri.html">GALERI</a></li><br>
-                        <li><a href="berita.html">BERITA</a></li><br>
+                        <li><a href="berita.html">BULETIN</a></li><br>
                         <li><a href="#sejarah">LITURGI IBADAH</a></li><br>
                         <li><a href="#sejarah">REKENING</a></li>
                     </ul>
