hubungi kami update

--- a/kontak.html
+++ b/kontak.html
@@ -79,10 +79,45 @@
 
         <div class="back">
             <div class="background-scnd"></div>
-            <h2 class="contact-title" id="kontak" data-aos="fade" data-aos-duration="3000" data-aos-delay="2000">KONTAK KAMI</h2>
+            <h2 class="contact-title" id="kontak" data-aos="fade" data-aos-duration="3000" data-aos-delay="2000">HUBUNGI KAMI</h2>
         </div>
 
         <!-- navbar end  -->
+
+        <!-- usul-saran  -->
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>KONTAK KAMI</h1>
+                    </div>
+                </div><br><br>
+                <div class="row">
+                    <div class="col">
+                        <form action="">
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Nama Lengkap</label>
+                                <input type="text" class="form-control" id="name" aria-describedby="name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">
+                                    Email
+                                </label>
+                                <input type="email" class="form-control" id="email" aria-describedby="email">
+                            </div>
+                            <div class="mb-3">
+                                <label for="pesan" class="form-label">
+                                    Pesan
+                                </label>
+                                <textarea name="" class="form-control" id="pesan"></textarea>
+                            </div>
+                            <button>Kirim</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- usul-saran end -->
 
         <!-- kontak  -->
         <section class="contact-section">
