--- a/kontak.html
+++ b/kontak.html
@@ -85,33 +85,33 @@
         <!-- navbar end  -->
 
         <!-- usul-saran  -->
-        <section id="contact">
+        <section id="contact" >
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h1>KONTAK KAMI</h1>
+                        <h1 data-aos="fade" data-aos-duration="2000" data-aos-delay="700">KONTAK KAMI</h1>
                     </div>
                 </div><br><br>
                 <div class="row">
                     <div class="col">
                         <form action="">
-                            <div class="mb-3">
+                            <div class="mb-3" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-delay="1000">
                                 <label for="name" class="form-label">Nama Lengkap</label>
                                 <input type="text" class="form-control" id="name" aria-describedby="name">
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-3" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-delay="1200">
                                 <label for="email" class="form-label">
                                     Email
                                 </label>
                                 <input type="email" class="form-control" id="email" aria-describedby="email">
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-3" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-delay="1400">
                                 <label for="pesan" class="form-label">
                                     Pesan
                                 </label>
                                 <textarea name="" class="form-control" id="pesan"></textarea>
                             </div>
-                            <button>Kirim</button>
+                            <button data-aos="zoom-in-up" data-aos-duration="2000" data-aos-delay="1600">Kirim</button>
                         </form>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
         <!-- kontak  -->
         <section class="contact-section">
             <div class="contact-cards-container">
-                <div class="contact-card" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
+                <div class="contact-card" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="100">
                     <div class="card-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="user-icon">
                             <path
@@ -133,7 +133,7 @@
                     <p class="card-name">Pendeta Jemaat</p>
                     <p class="card-cp">CP: 081240535491</p>
                 </div>
-                <div class="contact-card" data-aos="zoom-in" data-aos-duration="2500" data-aos-delay="1100">
+                <div class="contact-card" data-aos="zoom-in" data-aos-duration="2500" data-aos-delay="200">
                     <div class="card-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="user-icon">
                             <path
@@ -144,7 +144,7 @@
                     <p class="card-name">Sekertaris Jemaat</p>
                     <p class="card-cp">CP: 082192923653</p>
                 </div>
-                <div class="contact-card" data-aos="zoom-in" data-aos-duration="3000" data-aos-delay="1200">
+                <div class="contact-card" data-aos="zoom-in" data-aos-duration="3000" data-aos-delay="300">
                     <div class="card-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="user-icon">
                             <path
