--- a/index.html
+++ b/index.html
@@ -203,16 +203,20 @@
         </section>
 
 
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="rgba(214, 214, 214, 0.35)" fill-opacity="1" d="M0,128L40,149.3C80,171,160,213,240,234.7C320,256,400,256,480,229.3C560,203,640,149,720,133.3C800,117,880,139,960,170.7C1040,203,1120,245,1200,245.3C1280,245,1360,203,1400,181.3L1440,160L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
+    </svg>
         <div class="home-galeri">
             <h2 class="sumberkasih-title" data-aos="fade" data-aos-duration="2700" data-aos-delay="300">GALERI</h2><br><br>
             <div class="home-galeri-wrapper">
                 <img src="image/berita-img/f-12.jpg" alt="" data-aos="fade-up" data-aos-duration="2700">
                 <button><a href="galeri.html" data-aos="fade" data-aos-duration="2700"><b>
-                            < Lebih Lanjut>
+                            Selengkapnya...
                         </b></a></button>
                 <img src="image/mangkok-6-bulan/1.jpg" alt="" data-aos="fade-up" data-aos-duration="2700">
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(214, 214, 214, 0.35)" fill-opacity="1" d="M0,128L40,149.3C80,171,160,213,240,234.7C320,256,400,256,480,229.3C560,203,640,149,720,133.3C800,117,880,139,960,170.7C1040,203,1120,245,1200,245.3C1280,245,1360,203,1400,181.3L1440,160L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg><br><br><br>
 
         <div class="footer" data-aos="fade-up">
             <div class="footer-kontak">
